[package]
name = "api-service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json", "uuid"] }
diesel = { version = "1.4.4", features = ["postgres", "extras", "uuidv07"] }
dotenv = "0.15.0"
serde = "1.0.130"
serde_derive = "1.0.130"
uuid = "0.8.2"